# aith_epml

./: .dockerignore  .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  README.md  dvc.yaml  index.html  luigi.cfg  mkdocs.yml  mypy.ini  objects.inv  params.yaml  pyproject.toml
.dvc/: config
.github/workflows/: docs.yml
api/config/: index.html
api/pipeline/: index.html
configs/: clearml_server.docker-compose.yml  gbr_tuned.yaml  parallel_gbr.yaml  parallel_rf.yaml  parallel_ridge.yaml  rf_experiment.yaml  ridge_baseline.yaml
data/splits/: eval.csv.dvc  test.csv.dvc  train.csv.dvc
docs/: hw1_report.md  hw2_report_models_and_data_vcs.md  hw3_report_exps_tracking.md  hw4_report_pipeline_automatization.md  hw6_autodocs.md  index.md  luigi_pipeline_usage.md  models_and_data_vcs.md
docs/api/: config.md  pipeline.md
docs/guides/: deployment_guide.md  pydantic_guide.md
docs/hw_2/: hw2_report_models_and_data_vcs.md
docs/hw_4/: hw4_report_pipeline_automatization.md
hw1_report/: index.html
hw2_report_models_and_data_vcs/: index.html
hw3_report_exps_tracking/: index.html
hw4_report_pipeline_automatization/: index.html
hw6_autodocs/: index.html
luigi_pipeline_usage/: index.html
models/: linear_v1_model.json.dvc  linear_v1_train_eval_metrics.json.dvc
models_and_data_vcs/: index.html
pydantic_guide/: index.html
reports/: .gitignore
scripts/: clearml_experiment.py  clearml_pipeline.py  evaluate_model.py  split_data.py  test_model.py  test_trained_model.py  train_baseline.py  train_model.py
search/: search_index.json
(+35 files in other folders)
